fixed dark mode bug in contact.js

--- a/src/static/styles/styles.less
+++ b/src/static/styles/styles.less
@@ -24,7 +24,7 @@
 
 .content-dark,
 .content-light {
-    height: 100vh;
+    min-height: 100vh;
     left: 0;
     width: 100%;
 }
@@ -50,6 +50,7 @@
 
 .inherit {
     border-color: inherit;
+    //background: inherit;
 }
 
 .main-content-dark,
